you may feed it with more specific sets too
git-svn-id: https://scm.mmbase.org/mmbase/trunk@22565 91430c5f-d668-0410-9e7d-dd663366dcfd